<resources>
    <string name="app_name">DoKimDangKhoa_1706020040</string>
    <string name="add">Add</string>
    <string name="tittel">App Cuối kỳ :)</string>
    <string name="delete">Xóa</string>
    <string name="detail">chi tiết</string>
    <string name="description">description:</string>
    <string name="id">ID:</string>
    <string name="product_name">product name</string>
    <string name="btn_ok">ok</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="signout">Sign out</string>
</resources>
